Kubernetes/php/service.yml
apiVersion: v1
kind: Service
metadata:
  name: php-clusterip-svc
  labels:
    app: php
    app.kubernetes.io/name: php
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: php
